--- a/assets/css/style2.css
+++ b/assets/css/style2.css
@@ -400,6 +400,21 @@ button#BtnAddMore{width:140px;}
 .open > .dropdown-menu{right:-22px;/* width:fit-content;*/
  /* margin:auto;*/
 }
+.dataTables_wrapper .dataTables_paginate .paginate_button.current, .dataTables_wrapper .dataTables_paginate .paginate_button.current:hover {
+    color: #333 !important;
+    border: 1px solid #428bca!important;
+    background-color: white;
+    background: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #fff), color-stop(100%, #dcdcdc));
+    background: -webkit-linear-gradient(top, #fff 0%, #dcdcdc 100%);
+    background: -moz-linear-gradient(top, #fff 0%, #dcdcdc 100%);
+    background: -ms-linear-gradient(top, #fff 0%, #dcdcdc 100%);
+    background: -o-linear-gradient(top, #fff 0%, #dcdcdc 100%);
+    background: #428bca !important;
+    width: 25px !important;
+    height: 30px!important;
+    line-height: 15px;
+    color: #fff !important;
+}
 .print-btn{backface-visibility:hidden;margin-left:270px;padding:13px 20px;background:#fff;box-shadow:0 4px 24px 0 rgb(34 41 47 / 10%);}
 .slipN{color:#000;}
 .head-h{text-align:center;}
