--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -11,6 +11,21 @@ ul.m-li li.firs{width:35% !important;}
 ul.m-li li.las{width:62% !important;}
 .premier_igmcol h3{font-size:19px !important;font-weight:700 !important;}
 }
+.dataTables_wrapper .dataTables_paginate .paginate_button.current, .dataTables_wrapper .dataTables_paginate .paginate_button.current:hover {
+    color: #333 !important;
+    border: 1px solid #428bca!important;
+    background-color: white;
+    background: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #fff), color-stop(100%, #dcdcdc));
+    background: -webkit-linear-gradient(top, #fff 0%, #dcdcdc 100%);
+    background: -moz-linear-gradient(top, #fff 0%, #dcdcdc 100%);
+    background: -ms-linear-gradient(top, #fff 0%, #dcdcdc 100%);
+    background: -o-linear-gradient(top, #fff 0%, #dcdcdc 100%);
+    background: #428bca !important;
+    width: 25px !important;
+    height: 30px!important;
+    line-height: 15px;
+    color: #fff !important;
+}
 body{font-family:'Open Sans'as,sans-serif;line-height:28px;-moz-transform:scale(1,1);zoom:1;zoom:100%;}
 .set-radius-zero{border-radius:0px;-moz-border-radius:0px;-webkit-border-radius:0px;}
 .content-wrapper{margin-top:40px;min-height:800px;padding-bottom:90px;}
