--- a/public/assets/css/style2.css
+++ b/public/assets/css/style2.css
@@ -16,21 +16,7 @@ input.form-control.form-control2{margin:0 !important;}
 .totlass{display:inline!important;background:transparent!important;margin-top:-25px!important;}
 .totlass h2{font-size:13px !important;}
 }
-.dataTables_wrapper .dataTables_paginate .paginate_button.current, .dataTables_wrapper .dataTables_paginate .paginate_button.current:hover {
-    color: #333 !important;
-    border: 1px solid #428bca!important;
-    background-color: white;
-    background: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #fff), color-stop(100%, #dcdcdc));
-    background: -webkit-linear-gradient(top, #fff 0%, #dcdcdc 100%);
-    background: -moz-linear-gradient(top, #fff 0%, #dcdcdc 100%);
-    background: -ms-linear-gradient(top, #fff 0%, #dcdcdc 100%);
-    background: -o-linear-gradient(top, #fff 0%, #dcdcdc 100%);
-    background: #428bca !important;
-    width: 25px !important;
-    height: 30px!important;
-    line-height: 15px;
-    color: #fff !important;
-}
+.dataTables_wrapper .dataTables_paginate .paginate_button.current,.dataTables_wrapper .dataTables_paginate .paginate_button.current:hover{color:#333 !important;border:1px solid #428bca!important;background-color:white;background:-webkit-gradient(linear,left top,left bottom,color-stop(0%,#fff),color-stop(100%,#dcdcdc));background:-webkit-linear-gradient(top,#fff 0%,#dcdcdc 100%);background:-moz-linear-gradient(top,#fff 0%,#dcdcdc 100%);background:-ms-linear-gradient(top,#fff 0%,#dcdcdc 100%);background:-o-linear-gradient(top,#fff 0%,#dcdcdc 100%);background:#428bca !important;width:25px !important;height:30px!important;line-height:15px;color:#fff !important;}
 /*scroll 1 */
 ::selection{background:#895ffc;color:#fff;text-shadow:none;}
 ::-webkit-scrollbar{width:5px;background-color:#f5f5f5;}
@@ -805,9 +791,7 @@ div#showDetailModelOneParamerter .modalWidth{width:80%;}
 @media (max-width:980px){}
 @media (min-width:440px) and (max-width:740px){}
 @media (max-width:425px){}
-
 /* ____________________________________________________ color . css ____________________________________________________ */
-
 .bg-white .card-header,.bg-white .card-footer{background-color:transparent;}
 .border-white{border:1px solid #ffffff !important;}
 .border-top-white{border-top:1px solid #ffffff;}
